--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,56 @@
+:root {
+  scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
     /* background-color: #FFFFFF; */
-    background-color:   #fff7f7;
+    background-color:   white;
 }
+
+/*--------------------------------------------------------------
+# Sections
+--------------------------------------------------------------*/
+section {
+  padding: 60px 0;
+  overflow: hidden;
+}
+
+.section-header {
+  text-align: center;
+  padding-bottom: 40px;
+}
+
+.section-header h2 {
+  font-size: 13px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  margin: 0;
+  color: #4154f1;
+  text-transform: uppercase;
+}
+
+.section-header p {
+  margin: 10px 0 0 0;
+  padding: 0;
+  font-size: 38px;
+  line-height: 42px;
+  font-weight: 700;
+  color: #10367a;
+}
+
+@media (max-width: 768px) {
+  .section-header p {
+    font-size: 28px;
+    line-height: 32px;
+  }
+}
+
+/*--------------------------------------------------------------
+# Sections
+--------------------------------------------------------------*/
+
 
 .logo{
     font-weight: bold;
@@ -199,6 +246,161 @@ body{
     position: relative;
     margin-top: -120px;
 }
+
+.feature-icons-content{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.feature-icons-content-h1{
+    font-weight: 700;
+    line-height: 45px;
+    font-size: 35px;
+    color: #09357a;
+    font-style: normal;
+}
+
+.feature-icons-content-p{
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #2d2d2d;
+}
+
+.features-icons {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .features-icons .features-icons-item {
+    max-width: 20rem;
+  }
+  
+  .features-icons .features-icons-item .features-icons-icon {
+    height: 7rem;
+  }
+  
+  .features-icons .features-icons-item .features-icons-icon i {
+    font-size: 4.5rem;
+  }
+  
+  .features-icons .features-icons-item:hover .features-icons-icon i {
+    font-size: 5rem;
+  }
+
+  .feature-icons-row{
+      margin-bottom: 30px;
+  }
+
+  .feature-icons-button{
+    border-radius: 0.3rem;
+    color: white;
+    background-color: #733204;
+    border-style: hidden;
+    margin-left: 15px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    padding: 10px 15px;
+  }
+
+  .feature-icons-button:hover{
+    color: white;
+    border-color: #733204;
+    background-color: #733204;
+    box-shadow: white;
+    box-shadow: 0 0 0 1px rgb(0 0 0 / 50%);
+  }
+
+  
+/* # Testimonials */
+
+.testimonials .testimonial-item {
+    box-sizing: content-box;
+    padding: 30px;
+    margin: 40px 30px;
+    box-shadow: 0px 0 20px rgba(1, 41, 112, 0.1);
+    background: #fff;
+    min-height: 320px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transition: 0.3s;
+  }
+  
+  .testimonials .testimonial-item .stars {
+    margin-bottom: 15px;
+  }
+  
+  .testimonials .testimonial-item .stars i {
+    color: #ffc107;
+    margin: 0 1px;
+  }
+  
+  .testimonials .testimonial-item .testimonial-img {
+    width: 90px;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    margin: 0 auto;
+  }
+  
+  .testimonials .testimonial-item h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 5px 0;
+    color: #111;
+  }
+  
+  .testimonials .testimonial-item h4 {
+    font-size: 14px;
+    color: #999;
+    margin: 0;
+  }
+  
+  .testimonials .testimonial-item p {
+    font-style: italic;
+    margin: 0 auto 15px auto;
+  }
+  
+  .testimonials .swiper-pagination {
+    margin-top: 20px;
+    position: relative;
+  }
+  
+  .testimonials .swiper-pagination .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    opacity: 1;
+    border: 1px solid #4154f1;
+  }
+  
+  .testimonials .swiper-pagination .swiper-pagination-bullet-active {
+    background-color: #4154f1;
+  }
+  
+  .testimonials .swiper-slide {
+    opacity: .3;
+  }
+  
+  @media (max-width: 1199px) {
+    .testimonials .swiper-slide-active {
+      opacity: 1;
+    }
+    .testimonials .swiper-pagination {
+      margin-top: 0;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .testimonials .swiper-slide-next {
+      opacity: 1;
+      transform: scale(1.12);
+    }
+  }
+  
+
+  
 
 
 
