commit after home page almost done

--- a/styles.css
+++ b/styles.css
@@ -597,5 +597,164 @@ footer hr {
 
 }
 
+/*--------------------------------------------------------------
+# Fund my external insulation
+--------------------------------------------------------------*/
+.fund-insulation-section-h3{
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 35px;
+  color: #09357a;
+}
+
+.fund-insulation-section-h4{
+  font-weight: 550;
+  font-size: 21px;
+  line-height: 32px;
+  color: #052a66;
+}
+
+.fund-insulation-section-link{
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  color: #733204;
+}
+
+.fund-insulation-section-link:hover{
+  color: #522403;
+}
+
+/*--------------------------------------------------------------
+# Eco scheme
+--------------------------------------------------------------*/
+.eco-section{
+  padding-top: 3px;
+}
+
+.eco-scheme-img{
+  height: 250px;
+  width: 600px;
+}
 
 
+/*--------------------------------------------------------------
+# other isulation
+--------------------------------------------------------------*/
+.other-insulation-to-consider-container{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.other-insulation-h5{
+  font-weight: 550;
+  font-size: 20px;
+  line-height: 32px;
+  color: #052a66;
+}
+
+.other-insulation-section-h3{
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 35px;
+  color: #09357a;
+}
+
+/*--------------------------------------------------------------
+# Insulation and energy-saving advice
+--------------------------------------------------------------*/
+
+.Insulation-energy-saving-advice-container{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.services .service-box {
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+  height: 100%;
+  padding: 60px 30px;
+  text-align: center;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+
+
+.services .service-box h3 {
+  color: #444444;
+  font-weight: 700;
+}
+
+.services .service-box .read-more {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 8px 20px;
+}
+
+.services .service-box .read-more i {
+  line-height: 0;
+  margin-left: 5px;
+  font-size: 18px;
+}
+
+.services .service-box.blue {
+  border-bottom: 3px solid #2db6fa;
+}
+
+.services .service-box.blue .icon {
+  color: #2db6fa;
+  background: #dbf3fe;
+}
+
+.services .service-box.blue .read-more {
+  color: #2db6fa;
+}
+
+.services .service-box.blue:hover {
+  background: #2db6fa;
+}
+
+.services .service-box.orange {
+  border-bottom: 3px solid #f68c09;
+}
+
+.services .service-box.orange .icon {
+  color: #f68c09;
+  background: #fde3c4;
+}
+
+.services .service-box.orange .read-more {
+  color: #f68c09;
+}
+
+.services .service-box.orange:hover {
+  background: #f68c09;
+}
+
+.services .service-box.green {
+  border-bottom: 3px solid #08da4e;
+}
+
+.services .service-box.green .icon {
+  color: #08da4e;
+  background: #cffddf;
+}
+
+.services .service-box.green .read-more {
+  color: #08da4e;
+}
+
+.services .service-box.green:hover {
+  background: #08da4e;
+}
+
+.services .service-box:hover h3, .services .service-box:hover p, .services .service-box:hover .read-more {
+  color: #fff;
+}
+
+.services .service-box:hover .icon {
+  background: #fff;
+}
