navbar contactus tab is responsive

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@ body{
     /* background-color: #FFFFFF; */
     background-color:   rgb(236, 230, 230);
 }
-
+.ml-5{
+  margin-left: 5rem !important;
+}
 /*--------------------------------------------------------------
 # Sections
 --------------------------------------------------------------*/
